added git-commit-id-plugin in pom.xml